--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 
     </div>
 
-    <div class="elegir-tipo-de-plan">
+    <div class="elegir-tipo-de-plan animation" data-animation="show">
 
-        <div class="botones-de-planes animation" data-animation="fade">
+        <div class="botones-de-planes">
             <button class="anual button-tipo-de-plan">Anual (20% de descuento)</button>
             <button class="mensual button-tipo-de-plan-inactive">Mensual</button>
         </div>
 
-        <div class="tarjetas-planes animation" data-animation="show">
+        <div class="tarjetas-planes">
 
             <div class="tarjeta tarjeta1">
 
