--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
     <div class="ventajas">
 
-        <div class="beneficios animation" data-animation="fade">
+        <div class="beneficios">
 
             <div class="beneficio-especifico activo">
 
